# vecgeom

./: .clang-format  .gitignore  .gitlab-ci.yml  .mailmap  CMakeLists.txt  CTestConfig.cmake  INSTALL.md  Jenkinsfile  LICENSE  LICENSE.txt  Overview.md  README.md  ReleaseNotes.txt  VecGeomConfig.cmake.in  vecgeom-ctest.cmake
USolids/: History  (+1 more)
USolids/bridges/TGeo/: CMakeLists.txt  main.cpp
persistency/gdml/: CMakeLists.txt
test/: CMakeLists.txt  HypeTest.cpp  TrapezoidTest.cpp
test/VecGeomBenchmark/: BenchmarkResult.cpp  BenchmarkResult.h  Benchmarker.cpp  Benchmarker.cu  Benchmarker.h  CMakeLists.txt  NavigationBenchmarker.cpp  NavigationBenchmarker.cu  NavigationBenchmarker.h  VolumePointers.cpp  VolumePointers.h
test/VecGeomTest/: BenchmarkResult.cpp  Benchmarker.cpp  Benchmarker.cu  Benchmarker.h  CMakeLists.txt  ConventionChecker.cpp  G4GeoManager.cpp  G4GeoManager.h  NavStateConverter.h  NavigationBenchmarker.cpp  PlacedRootVolume.cpp  PlacedRootVolume.h  RootGeoManager.cpp  RootGeoManager.h  ShapeDebugger.cpp  ShapeTester.cpp  ShapeTester.h  UnplacedRootVolume.cpp  UnplacedRootVolume.h  Visualizer.cpp  VolumePointers.cpp  VolumePointers.h
test/benchmark/: 3LevelSubtractionBenchmark_virtual.cpp  ABBoxBenchmark.cpp  ArgParser.h  BenchmarkVGDMLShape.cpp  BoxBenchmark.cpp  BoxIntersectHollowTubeBenchmark_virtual.cpp  BoxMinusHollowTubeBenchmark.cpp  BoxMinusHollowTubeBenchmark_virtual.cpp  BoxScaledBenchmark.cpp  BoxUnionBoxBenchmark_virtual.cpp  BoxUnionHollowTubeBenchmark_virtual.cpp  CMakeLists.txt  ConcaveSExtruBenchmark.cpp  ConeBenchmark.cpp  CutTubeBenchmark.cpp  EllipsoidBenchmark.cpp  EllipticalConeBenchmark.cpp  EllipticalTubeBenchmark.cpp  ExtrudedBenchmark.cpp  GenTrapBenchmark.cpp  GenTrapBenchmark_planar.cpp  GenericPolyconeBenchmark.cpp  HypeBenchmark.cpp  MultiUnionBenchmark.cpp  OrbBenchmark.cpp  ParaboloidBenchmark.cpp  ParaboloidScriptBenchmark.cpp  ParallelepipedBenchmark.cpp  PolyconeBenchmark.cpp  PolyhedronBenchmark.cpp  SExtruBenchmark.cpp  ScaledBenchmark.cpp  SphereBenchmark.cpp  TessellatedBenchmark.cpp  TestCone.cpp  TestNavIndex.cpp  TestNavIndex.cu  TetBenchmark.cpp  TorusBenchmark.cpp  TorusBenchmark2.cpp  (+5 more)
test/core/: AssemblyTest.cpp  BenchmarkTessels.cpp  BitSetTest.cpp  BooleanConvexityTest.cpp  BoxBoxIntersectionTest.cpp  ContainerTest.cpp  CreateExtruded.cpp  CreateTessels.cpp  EmbreeManagerTest.cpp  MapTest.cpp  MapTest.cu  PhiWedgeTest.cpp  PlanesTest.cpp  QuadrilateralTest.cpp  SOATest.cpp  SafetyEstimatorTest.cpp  SetupBoxGeometry.h  SplittedABBox.cpp  TessellatedOrb.h  TestConvexity.cpp  TestEarlyReturns.cpp  TestGeoManager.cpp  TestHybridBVH.cpp  TestMakeInstance.cpp  TestMap.cpp  TestMaskedAssign.cpp  TestNavigationState.cpp  TestNavigationStatePool.cpp  TestRegions.cpp  TestSExtru.cpp  TestTessels.cpp  TestVector.cpp  TestVoxelHashMap.cpp  ThetaConeTest.cpp  Transformation3DTest.cpp  boolminustest.cpp  boolminustest2.cpp  create_geometry.cpp  gentraptest.cpp  testVectorSafety.cpp
test/cuda/: BVHTest.cpp  BVHTest.cu  GeometryTest.cpp  GeometryTest.cu  GeometryTest.h  MapTest.cpp  MapTest.cu  MapTestClass.cpp  MapTestClass.cu
test/gdml/: CMakeLists.txt
test/globalbenchmarks/: LocatePointsBenchmark.cpp  NavigationBenchmark.cpp  NavigationBenchmark.cpp   NavigationKernelBenchmarker.cpp  SafetyKernelBenchmarker.cpp  TraceTrack.cpp  XRayBenchmarkFromROOTFile.cpp
test/root/: AssemblyExample.cpp  BenchmarkShapeFromROOTFile.cpp  BenchmarkShapeFromROOTFile_WithVisualization.cpp  CompareDistances.cpp  CompareDistances_WithoutRootFile.cpp  E03Test.cpp  ExitingOrEntering.cpp  GenerateSurfacePoints.cpp  ImportFromRootFileTest.cpp  ImportTGeoPgon.cpp  ParaboloidTest.cpp  TestExportToROOT.cpp  complex_test1.cpp  root_geometry.cpp  trd_validation.cpp
test/services/: CompNavStatePools.cpp  LibraryGenerator.cpp  NavigationSpecializerTest.cpp  produceSpecializedNavigatorLib.sh
test/shape_tester/: ConventionChecker.cpp  ShapeTester.cpp  ShapeTester.h  convention_testTube.cpp  shapeDebug.cpp  shape_debugFromROOTFile.cpp  shape_testBox.cpp  shape_testCone.cpp  shape_testCutTube.cpp  shape_testEllipsoid.cpp  shape_testEllipticalCone.cpp  shape_testEllipticalTube.cpp  shape_testExtruded.cpp  shape_testFromROOTFile.cpp  shape_testGenTrap.cpp  shape_testGenericPolycone.cpp  shape_testHype.cpp  shape_testMultiUnion.cpp  shape_testOrb.cpp  shape_testParaboloid.cpp  shape_testParallelepiped.cpp  shape_testPolycone.cpp  shape_testPolyhedron.cpp  shape_testSExtru.cpp  shape_testSphere.cpp  shape_testTessellated.cpp  shape_testTet.cpp  shape_testTorus.cpp  shape_testTorus2.cpp  shape_testTrapezoid.cpp  shape_testTrd.cpp  shape_testTube.cpp
test/static_analysis/: AddClang.cmake  CMakeLists.txt  MaskedAssignCheck.cpp  MaskedAssignCheck.h  README.txt  RunChecks.sh  VecGeomTidyModule.cpp  run-clang-tidy.py
test/unit_tests/: ApproxEqual.h  BooleanConvexityTest.cpp  BoxBoxIntersectionTest.cpp  SplittedABBox.cpp  TestBooleans.cpp  TestBox.cpp  TestBoxlikeTrapezoid.cpp  TestCoaxialCones.cpp  TestCons.cpp  TestConvexity.cpp  TestEllipsoid.cpp  TestEllipticalCone.cpp  TestEllipticalTube.cpp  TestEstimateSurfaceArea.cpp  TestGenTrap.cpp  TestGenericPolycone.cpp  TestHype.cpp  TestMarchingCubes.cpp  TestMesh.cpp  TestNavStateIndex.cpp  TestOrb.cpp  TestParaboloid.cpp  TestParallelepiped.cpp  TestPolycone.cpp  TestPolyhedra.cpp  TestReducedPolycone.cpp  TestSphere.cpp  TestTessellated.cpp  TestTet.cpp  TestTorus.cpp  TestTorus2.cpp  TestTrap.cpp  TestTrd.cpp  TestTube.cpp  TestTube.cpp.new  TestUtils3D.cpp  TestVECGEOM-601.cpp  TestVecGeomPolycone.cpp  geantHype.cpp  newTestHype.cpp  (+1 more)
test/usolids/: CompatibilityTest.cpp
test/utilities/: ShapeDebugger.h
test/visualization/: DebugPolyhedron.cpp  DebugSphere.cpp  DebugTube.cpp  VisualizeCone.cpp  VisualizeCutTube.cpp  VisualizeExtruded.cpp  VisualizeGenTrap.cpp  VisualizeHype.cpp  VisualizeMultiUnion.cpp  VisualizeParallelepiped.cpp  VisualizeParboloid.cpp  VisualizePolycone.cpp  VisualizePolyhedron.cpp  VisualizeScaled.cpp  VisualizeSphere.cpp  VisualizeTorus.cpp  VisualizeTrap.cpp  VisualizeTube.cpp
(+922 files in other folders)
